--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,23 @@
 <div class="container">
   <form class="form" id="search-form">
     <div class="form-group">
-      <input type="text" class="form-control" name="query" id="search-input" placeholder="Search images" />
+      <input 
+      type="text" 
+      class="form-control" 
+      name="query" 
+      id="search-input" 
+      placeholder="Search images" 
+      />
     </div>
 
     <button type="submit" class="btn btn-primary">Search</button>
   </form>
   
-  
   <div id="gallery" class="gallery"></div>
-  <button type="button" id="load-more" class="load-more hidden">Load more</button>
-  <div id="loader" class="loader hidden"></div>
+  <button type="button" id="load-more" class="load-more">Load more</button>
+  <div id="loader" class="loader"></div>
 </div>
 
     <script type="module" src="./main.js"></script>
   </body>
-
 </html>
